CORE-22581: Image cropping issue on gallery and slider edge to edge implementation on Mobile.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/magazine-layout-v2/component/_magazine-pdp-header.scss
@@ -15,8 +15,10 @@
 
   @include breakpoint($only-mobile) {
     padding: 1.25rem;
-    display: block;
+    display: flex;
+    flex-direction: column;
     background: $magv2-sticky-header-bg;
+    position: static;
   }
 
   &.magv2-pdp-sticky-header {
@@ -55,6 +57,18 @@
         display: block;
         height: 2.875rem;
         width: 2.875rem;
+      }
+    }
+  }
+}
+
+html[lang=ar] {
+  .magv2-header {
+    .magv2-header-wrapper {
+      .back-button {
+        @include icon(arrowup, after) {
+          transform: rotate(90deg);
+        }
       }
     }
   }
